# SimVascular-Plugin-Purkinje-Network

./: CMakeLists.txt  Notes  README.md  export-pulgin.sh  export.sh
BuildWithMake/: Makefile  include.purkinjenetwork.mk  quick-build-windows.sh
BuildWithMake/Release/: Makefile
BuildWithMake/Release/windows_msi_helpers/: makewxs-plugin-purkinjenetwork.tcl
Code/Source/sv4gui/: Makefile
Code/Source/sv4gui/Modules/: Makefile
Code/Source/sv4gui/Modules/PurkinjeNetwork/: CMakeLists.txt  Makefile  files.cmake  sv4gui_PurkinjeNetwork.cxx  sv4gui_PurkinjeNetwork.h  sv4gui_PurkinjeNetworkFolder.cxx  sv4gui_PurkinjeNetworkFolder.h  sv4gui_PurkinjeNetworkIO.cxx  sv4gui_PurkinjeNetworkIO.h  sv4gui_PurkinjeNetworkUtils.cxx  sv4gui_PurkinjeNetworkUtils.h
Code/Source/sv4gui/Modules/PurkinjeNetwork/python/fractal-tree/: FractalTree.py  fractal_tree.py  run-fractal-tree.py  run-fractal-tree.sh  run.py
Code/Source/sv4gui/Plugins/: Makefile
Code/Source/sv4gui/Plugins/org.sv.gui.qt.purkinjenetwork/: Makefile  manifest_headers.cmake  sv4gui_PurkinjeNetwork1DContainer.cxx  sv4gui_PurkinjeNetwork1DContainer.h  sv4gui_PurkinjeNetwork1DMapper.cxx  sv4gui_PurkinjeNetworkEdit.cxx  sv4gui_PurkinjeNetworkEdit.ui  sv4gui_PurkinjeNetworkInteractor.cxx  sv4gui_PurkinjeNetworkLoadSurfaceAction.h  sv4gui_PurkinjeNetworkMeshContainer.h  sv4gui_PurkinjeNetworkMeshMapper.cxx  sv4gui_PurkinjeNetworkModel.cxx  sv4gui_PurkinjeNetworkModel.h  sv4gui_PurkinjeNetworkPluginActivator.cxx  sv4gui_PurkinjeNetworkPluginActivator.h  sv4gui_VtkPurkinjeNetworkSphereWidget.cxx
Distribution/: CMakeLists.txt  setup-linux.in  setup-macos.in
Modules/PurkinjeNetwork/: CMakeLists.txt  files.cmake  sv4gui_PurkinjeNetwork.h  sv4gui_PurkinjeNetworkIO.cxx
Modules/PurkinjeNetwork/python/fractal-tree/: Branch3D.py  FractalTree.py  Mesh.py  ParaviewWriter.py  fractal-tree.py  fractal_tree.py  parameters.py  run-fractal-tree.py  run-fractal-tree.sh  sphere.vtu
Modules/PurkinjeNetwork/resource/Interactions/: meshConfig.xml  meshInteraction.xml  seedConfig.xml  seedInteraction.xml
Plugins/: CMakeLists.txt  manifest_headers.cmake  plugin.xml  sv4gui_PurkinjeNetworkEdit.cxx  sv4gui_PurkinjeNetworkEdit.h  sv4gui_PurkinjeNetworkEdit.ui  sv4gui_PurkinjeNetworkLoadAction.h  sv4gui_PurkinjeNetworkPluginActivator.h  sv4gui_PurkinjeSeedContainer.h  sv4gui_PurkinjeSeedInteractor.h
Plugins/org.sv.gui.qt.purkinjenetwork/: CMakeLists.txt  files.cmake  plugin.xml  sv4gui_PurkinjeNetwork1DContainer.cxx  sv4gui_PurkinjeNetwork1DContainer.h  sv4gui_PurkinjeNetwork1DMapper.cxx  sv4gui_PurkinjeNetwork1DMapper.h  sv4gui_PurkinjeNetworkCreate.cxx  sv4gui_PurkinjeNetworkCreate.h  sv4gui_PurkinjeNetworkCreate.ui  sv4gui_PurkinjeNetworkCreateAction.cxx  sv4gui_PurkinjeNetworkCreateAction.h  sv4gui_PurkinjeNetworkEdit.cxx  sv4gui_PurkinjeNetworkEdit.h  sv4gui_PurkinjeNetworkEdit.ui  sv4gui_PurkinjeNetworkInteractor.cxx  sv4gui_PurkinjeNetworkInteractor.h  sv4gui_PurkinjeNetworkLegacySaveAction.cxx  sv4gui_PurkinjeNetworkLegacySaveAction.h  sv4gui_PurkinjeNetworkLoadAction.cxx  sv4gui_PurkinjeNetworkLoadSurfaceAction.cxx  sv4gui_PurkinjeNetworkLoadVolumeAction.cxx  sv4gui_PurkinjeNetworkLoadVolumeAction.h  sv4gui_PurkinjeNetworkMeshContainer.cxx  sv4gui_PurkinjeNetworkMeshContainer.h  sv4gui_PurkinjeNetworkMeshMapper.cxx  sv4gui_PurkinjeNetworkMeshMapper.h  sv4gui_PurkinjeNetworkModel.cxx  sv4gui_PurkinjeNetworkModel.h  sv4gui_PurkinjeNetworkPluginActivator.cxx  sv4gui_PurkinjeSeedContainer.cxx  sv4gui_PurkinjeSeedInteractor.cxx  sv4gui_PurkinjeSeedMapper.cxx  sv4gui_PurkinjeSeedMapper.h  sv4gui_VtkPurkinjeNetworkSphereWidget.h
Plugins/resources/: purkinje_network.png.1
example-projects/purkinje-network-ideal-heart/: .svproj
example-projects/purkinje-network-ideal-heart/Images/: ideal heart.vti
example-projects/purkinje-network-ideal-heart/Meshes/: myocardium.msh  myocardium.vtp  myocardium.vtu
example-projects/purkinje-network-ideal-heart/Models/: myocardium.mdl  myocardium.vtp
example-projects/purkinje-network-ideal-heart/Purkinje-Network/: left-ventricle.vtp  left-ventricle.vtu  left-ventricle_endnodes.txt  left-ventricle_ien.txt  left-ventricle_xyz.txt  mesh-complete.exterior.vtp  right-ventricle.vtp  right-ventricle.vtu  right-ventricle_endnodes.txt  right-ventricle_ien.txt  right-ventricle_xyz.txt  rv-parameters.txt
example-projects/purkinje-network-ideal-heart/parameter-files/: lv-parameters.txt
